--- a/bin/index.html
+++ b/bin/index.html
@@ -27,6 +27,11 @@
         }
     </script>
     <script type="text/javascript" src="game.js"></script>
+    <!-- <script>
+        var img = document.createElement('img')
+        img.src = "./img/8.png"
+        document.querySelector('body').append(img)
+    </script> -->
 </body>
 
 </html>
